--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -19,7 +19,7 @@
     "import ipywidgets as pyw\n",
     "from py4DSTEM.process.utils import single_atom_scatter\n",
     "\n",
-    "plt.rcParams['font.family'] = 'Times New Roman'\n",
+    "plt.rcParams['font.family'] = 'Cambria'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
     "             \"hotpink\", \"darkgray\"]\n",
@@ -32,7 +32,12 @@
     "        gr_tmp = 8 * np.pi * simpson(rif_sin, dx=(k_list[1]-k_list[0]))\n",
     "        gr.append(gr_tmp)\n",
     "    \n",
-    "    return np.asarray(gr)"
+    "    return np.asarray(gr)\n",
+    "\n",
+    "def find_nearest(array, value):\n",
+    "    array = np.asarray(array)\n",
+    "    idx = (np.abs(array - value)).argmin()\n",
+    "    return idx"
    ]
   },
   {
@@ -55,8 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_adr = tkf.askopenfilenames()\n",
-    "print(*raw_adr, sep=\"\\n\")"
+    "raw_adr = tkf.askopenfilename()\n",
+    "print(raw_adr)"
    ]
   },
   {
@@ -82,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [2.2478, 2.2478, 0.02079]\n",
+    "scale = [2.2478, 2.2478, 0.01722]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
     "size = rot_dp_data.shape"
@@ -217,6 +222,7 @@
     "    ax[0][1].grid()\n",
     "    ax[1][0].plot(k_list, rif_tmp, 'k-')\n",
     "    ax[1][0].plot(k_list, rif_tmp_filtered, 'g-')\n",
+    "    ax[1][0].set_ylim(ymin=np.min(rif_tmp_filtered), ymax=np.max(rif_tmp_filtered))\n",
     "    ax[1][0].fill_between([k_list[0], k_list[int(f_lc*len(filt))]], np.max(rif_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[1][0].fill_between([k_list[int(f_c*len(filt))], k_list[-1]], np.max(rif_tmp), alpha=0.5, color=\"green\")\n",
     "    ax[1][0].grid()\n",
@@ -232,9 +238,9 @@
     "st = {\"description_width\": \"initial\"}\n",
     "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
     "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.001, description=\"N\", style=st)\n",
+    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.0001, description=\"N\", style=st)\n",
     "alpha_wg = pyw.FloatText(value=cor_term_ctb[opt_ind], step=0.005, description=\"alpha\", style=st)\n",
-    "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
+    "filter_wg = pyw.BoundedIntText(value=5, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
     "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
     "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
@@ -271,8 +277,8 @@
    "outputs": [],
    "source": [
     "RIF_data = []\n",
-    "for i in range(size[1]):\n",
-    "    for j in range(size[0]):\n",
+    "for i in range(size[0]):\n",
+    "    for j in range(size[1]):\n",
     "        filt = damp[filter_select].copy()\n",
     "        filt[:int(low_cut*len(filt))] = 0\n",
     "        filt[int(high_cut*len(filt)):] = 0\n",
@@ -281,7 +287,7 @@
     "        rif = (((rot_dp_data[i, j] + alpha - N*AF_mean_square) / (N*AF_square_mean)) * k_list) * filt\n",
     "        RIF_data.append(rif)\n",
     "               \n",
-    "RIF_data = np.asarray(RIF_data).reshape(size[1], size[0], -1)"
+    "RIF_data = np.asarray(RIF_data).reshape(size[0], size[1], -1)"
    ]
   },
   {
@@ -302,12 +308,12 @@
    "outputs": [],
    "source": [
     "Gr = []\n",
-    "for i in range(size[1]):\n",
-    "    for j in range(size[0]):\n",
+    "for i in range(size[0]):\n",
+    "    for j in range(size[1]):\n",
     "        tmp_Gr = rif_to_rdf(RIF_data[i, j], r_list, k_list)\n",
     "        Gr.append(tmp_Gr)\n",
     "\n",
-    "Gr = np.asarray(Gr).reshape(size[1], size[0], -1)\n",
+    "Gr = np.asarray(Gr).reshape(size[0], size[1], -1)\n",
     "print(Gr.shape)    "
    ]
   },
@@ -320,9 +326,35 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "for i in range(size[0]):\n",
-    "    ax.plot(r_list, Gr[0, i])\n",
+    "    ax.plot(r_list, Gr[i, 0])\n",
     "ax.grid()\n",
     "ax.set_xlim(xmin=1.0, xmax=3.0)\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a416f6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ini_ind = find_nearest(r_list, 1.50)\n",
+    "fin_ind = find_nearest(r_list, 2.00)\n",
+    "\n",
+    "max_ind = np.argmax(Gr[:, :, ini_ind:fin_ind], axis=2)\n",
+    "print(max_ind.shape)\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 4))\n",
+    "ax.hist(max_ind.flatten(), bins=100)\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 12))\n",
+    "ax.imshow(max_ind, cmap=\"inferno\")\n",
+    "ax.axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
