--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -52,10 +52,10 @@
    "source": [
     "#rel_lmb = 0.00197 # nm, relativistic wavelength for 300 kV\n",
     "#rel_lmb = 0.00251 # nm, relativistic wavelength for 200 kV\n",
-    "k_per_pixel = 0.2163 # 1/nm\n",
+    "k_per_pixel = 0.1722 # 1/nm\n",
     "r_per_pixel = 2.4416 # nm\n",
     "\n",
-    "s_dim = 64\n",
+    "s_dim = 60\n",
     "cb_rad = 7\n",
     "k_list = np.arange(s_dim) * k_per_pixel\n",
     "print(k_list)"
@@ -151,7 +151,7 @@
     "for i in range(num_split):\n",
     "    for line in radial_var_sum[i]:\n",
     "        ax.plot(k_list, line, color=color_rep[i+1], linestyle=\"-\", label=\"split %d\"%(i+1))\n",
-    "ax.grid()\n",
+    "#ax.grid()\n",
     "#fig.legend(fontsize=\"xx-large\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_ranges = [[14, 16], [21, 24], [35, 36], [44, 46]]\n",
+    "k_ranges = [[21, 21], [40, 40]]\n",
     "for a, b in k_ranges:\n",
     "    print(k_list[a])\n",
     "radial_var_split = []\n",
@@ -178,8 +178,8 @@
     "\n",
     "for rg in k_ranges:\n",
     "    ax.fill_between([rg[0], rg[1]], np.max(radial_var_split), alpha=0.5, color=\"orange\")\n",
-    "ax.grid()\n",
-    "fig.legend(fontsize=\"xx-large\")\n",
+    "#ax.grid()\n",
+    "#fig.legend(fontsize=\"xx-large\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -191,16 +191,19 @@
    "outputs": [],
    "source": [
     "radial_var_split = np.asarray(radial_var_split)\n",
-    "max_var = radial_var_split[:, 23]\n",
+    "max_var = radial_var_split[:, 21]\n",
     "print(max_var.shape)\n",
     "\n",
-    "mean_rel_thick = [0.522105, 0.567426, 0.685723]\n",
+    "mean_rel_thick = [0.275,  0.592, 0.491]\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax[0].plot(mean_rel_thick, radial_var_split[:, 23], 'k-')\n",
-    "ax[0].plot(mean_rel_thick, radial_var_split[:, 23], 'r*')\n",
-    "ax[1].plot(mean_rel_thick, radial_var_split[:, 35], 'k-')\n",
+    "#ax[0].plot(mean_rel_thick, radial_var_split[:, 21], 'k-')\n",
+    "ax[0].plot(mean_rel_thick, radial_var_split[:, 21], 'r*')\n",
+    "#ax[1].plot(mean_rel_thick, radial_var_split[:, 35], 'k-')\n",
     "ax[1].plot(mean_rel_thick, radial_var_split[:, 35], 'r*')\n",
+    "\n",
+    "ax[0].tick_params(axis=\"both\", labelsize=15)\n",
+    "ax[1].tick_params(axis=\"both\", labelsize=15)\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -265,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "\n",
     "fig3, ax3 = plt.subplots(2, 2, figsize=(20, 6))\n",
     "row_label = [\"area (%)\", \"# of clusters (per 10000 nm^2)\", \"mean size (nm)\", \"largest size (nm)\", \"smallest size (nm)\"]\n",
@@ -383,7 +386,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "binsize = 2000\n",
     "fig1, ax1 = plt.subplots(1, 2, figsize=(15, 6))\n",
     "fig2, ax2 = plt.subplots(num_split, num_img, figsize=(15, 15))\n",
@@ -466,7 +469,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "#fig3, ax3 = plt.subplots(1, 3, figsize=(20, 10))\n",
     "fig3, ax3 = plt.subplots(1, 2, figsize=(5, 10))\n",
     "row_label = [\"area (%)\", \"# of clusters (per 10000 nm^2)\", \"mean size (nm)\", \"largest size (nm)\", \"smallest size (nm)\"]\n",
@@ -551,7 +554,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "%matplotlib widget\n",
     "binsize = 2000\n",
     "#fig3, ax3 = plt.subplots(1, 5, figsize=(20, 6))\n",
     "fig3, ax3 = plt.subplots(1, 4, figsize=(20, 6))\n",
@@ -669,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.16"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
