--- a/RDF/RDF_analysis_SADP.ipynb
+++ b/RDF/RDF_analysis_SADP.ipynb
@@ -17,9 +17,10 @@
     "import tifffile\n",
     "from scipy import ndimage\n",
     "import ipywidgets as pyw\n",
+    "import py4DSTEM\n",
     "from py4DSTEM.process.utils import single_atom_scatter\n",
     "\n",
-    "plt.rcParams['font.family'] = 'Times New Roman'\n",
+    "plt.rcParams['font.family'] = 'Cambria'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
     "             \"hotpink\", \"darkgray\"]\n",
@@ -55,7 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_adr = tkf.askopenfilenames()\n",
+    "raw_adr = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7737447d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_adr.extend(tkf.askopenfilenames())\n",
     "print(*raw_adr, sep=\"\\n\")"
    ]
   },
@@ -69,7 +80,10 @@
     "# Load a data\n",
     "rot_dp = []\n",
     "for i in range(len(raw_adr)):\n",
-    "    rot_dp.append(tifffile.imread(raw_adr[i]).reshape(1, -1))\n",
+    "    if raw_adr[i][-3:] == \"tif\":\n",
+    "        rot_dp.append(tifffile.imread(raw_adr[i]).reshape(1, -1))\n",
+    "    elif raw_adr[i][-3:] == \"dm4\":\n",
+    "        rot_dp.append(py4DSTEM.io.import_file(raw_adr[i])[0].reshape(1, -1))\n",
     "\n",
     "rot_dp = np.asarray(rot_dp)\n",
     "print(rot_dp.shape)\n",
@@ -86,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [1.0, 1.0, 0.01722]\n",
+    "scale = [1.0, 1.0, 0.001453]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/A']\n",
     "size = rot_dp_data.shape"
@@ -109,13 +123,23 @@
     "Snd_AF.get_scattering_factor()\n",
     "Snd_AFF = Snd_AF.fe\n",
     "\n",
-    "composition = [0.45, 0.55]\n",
+    "composition = [0.48, 0.52]\n",
     "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
     "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]\n",
     "\n",
     "#max_nor = np.max(AF_square_mean)\n",
     "#AF_mean_square /= max_nor\n",
     "#AF_square_mean /= max_nor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9259dbd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -235,9 +259,9 @@
     "st = {\"description_width\": \"initial\"}\n",
     "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
     "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.0001, description=\"N\", style=st)\n",
+    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.1, description=\"N\", style=st)\n",
     "alpha_wg = pyw.FloatText(value=cor_term_ctb[opt_ind], step=0.01, description=\"alpha\", style=st)\n",
-    "filter_wg = pyw.BoundedIntText(value=0, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
+    "filter_wg = pyw.BoundedIntText(value=5, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
     "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
     "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
     "full_wg = pyw.Checkbox(value=True, description=\"show the full range of RDF\")\n",
@@ -274,8 +298,8 @@
    "outputs": [],
    "source": [
     "RIF_data = []\n",
-    "for i in range(size[1]):\n",
-    "    for j in range(size[0]):\n",
+    "for i in range(size[0]):\n",
+    "    for j in range(size[1]):\n",
     "        filt = damp[filter_select].copy()\n",
     "        filt[:int(low_cut*len(filt))] = 0\n",
     "        filt[int(high_cut*len(filt)):] = 0\n",
@@ -284,7 +308,7 @@
     "        rif = (((rot_dp_data[i, j] + alpha - N*AF_mean_square) / (N*AF_square_mean)) * k_list) * filt\n",
     "        RIF_data.append(rif)\n",
     "               \n",
-    "RIF_data = np.asarray(RIF_data).reshape(size[1], size[0], -1)"
+    "RIF_data = np.asarray(RIF_data).reshape(size[0], size[1], -1)"
    ]
   },
   {
@@ -305,12 +329,12 @@
    "outputs": [],
    "source": [
     "Gr = []\n",
-    "for i in range(size[1]):\n",
-    "    for j in range(size[0]):\n",
+    "for i in range(size[0]):\n",
+    "    for j in range(size[1]):\n",
     "        tmp_Gr = rif_to_rdf(RIF_data[i, j], r_list, k_list)\n",
     "        Gr.append(tmp_Gr)\n",
     "\n",
-    "Gr = np.asarray(Gr).reshape(size[1], size[0], -1)\n",
+    "Gr = np.asarray(Gr).reshape(size[0], size[1], -1)\n",
     "print(Gr.shape)    "
    ]
   },
@@ -323,7 +347,7 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "for i in range(size[0]):\n",
-    "    ax.plot(r_list, Gr[0, i])\n",
+    "    ax.plot(r_list, Gr[i, 0])\n",
     "ax.grid()\n",
     "ax.set_xlim(xmin=1.0, xmax=3.0)\n",
     "fig.tight_layout()\n",
@@ -337,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tifffile.imwrite(raw_adr[:-4]+\"_Gr_upto_%dA_size_%d_2.tif\"%(int(r_size*r_scale), r_size), Gr)"
+    "tifffile.imwrite(\"others_ver2_Gr_upto_%dA_size_%d_2.tif\"%(int(r_size*r_scale), r_size), Gr)"
    ]
   },
   {
@@ -347,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tifffile.imwrite(raw_adr[:-4]+\"_RIF.tif\", RIF_data)"
+    "tifffile.imwrite(\"_RIF.tif\", RIF_data)"
    ]
   }
  ],
