--- a/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
+++ b/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
@@ -9,6 +9,7 @@
     "import py4DSTEM\n",
     "import tkinter.filedialog as tkf\n",
     "import numpy as np\n",
+    "import tifffile\n",
     "import matplotlib.pyplot as plt\n",
     "py4DSTEM.__version__\n",
     "\n",
@@ -46,7 +47,10 @@
    "outputs": [],
    "source": [
     "file_adr = tkf.askopenfilename()\n",
-    "print(file_adr)"
+    "print(file_adr)\n",
+    "\n",
+    "_data = tifffile.imread(file_adr)\n",
+    "print(_data.shape)"
    ]
   },
   {
@@ -54,12 +58,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "dataset = py4DSTEM.io.import_file(file_adr)\n",
+    "dataset = py4DSTEM.DataCube(data=_data)\n",
     "\n",
-    "Rx, Ry = 0.0208, 0.0208\n",
+    "Rx, Ry = 0.3, 0.3\n",
     "R_unit = \"A\"\n",
-    "Qx, Qy = 0.619, 0.619\n",
+    "Qx, Qy = 1.0, 1.0\n",
     "Q_unit = \"mrad\"\n",
     "\n",
     "dataset.calibration._params['Q_pixel_size'] = Qx\n",
@@ -285,7 +296,7 @@
     "ptycho = py4DSTEM.process.phase.SingleslicePtychographicReconstruction(\n",
     "    datacube=dataset,\n",
     "    device = 'cpu',\n",
-    "    energy = 80e3,\n",
+    "    energy = 200e3,\n",
     "    semiangle_cutoff = semiangle_cutoff,\n",
     "    defocus = defocus,\n",
     "    object_type='potential',\n",
@@ -455,18 +466,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_slice = 2\n",
-    "slice_thickness = 7.2\n",
+    "num_slice = 8\n",
+    "slice_thickness = 2.23\n",
     "\n",
     "ms_ptycho = py4DSTEM.process.phase.MultislicePtychographicReconstruction(\n",
     "    datacube=dataset,\n",
     "    num_slices=num_slice,\n",
     "    slice_thicknesses=slice_thickness,\n",
     "    verbose=True,\n",
-    "    energy=80E3,\n",
+    "    energy=200E3,\n",
     "    defocus=defocus,\n",
     "    semiangle_cutoff=semiangle_cutoff,\n",
-    "    device='cpu',\n",
+    "    device='gpu',\n",
     ").preprocess(\n",
     "    plot_center_of_mass = False,\n",
     "    plot_rotation=False,\n",
@@ -482,7 +493,7 @@
     "ms_ptycho = ms_ptycho.reconstruct(\n",
     "    reset=True,\n",
     "    store_iterations=True,\n",
-    "    max_iter = 30,\n",
+    "    max_iter = 20,\n",
     "    normalization_min=1,\n",
     ").visualize(\n",
     "    iterations_grid = 'auto'\n",
