--- a/FEM/transformation_radial_avg_var.ipynb
+++ b/FEM/transformation_radial_avg_var.ipynb
@@ -8,195 +8,14 @@
    "outputs": [],
    "source": [
     "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
-    "from scipy import stats\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as pch\n",
     "import tkinter.filedialog as tkf\n",
-    "from scipy import optimize\n",
-    "from scipy import ndimage\n",
-    "import ipywidgets as pyw\n",
-    "import time\n",
     "import tifffile\n",
-    "from skimage.metrics import structural_similarity as ssim\n",
-    "from skimage.metrics import mean_squared_error\n",
-    "plt.rcParams['font.family'] = 'Times New Roman'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1ed8f6-0b42-483d-b10b-3cecfdf9dab2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# refer to \"github.com/mkolopanis/python/blob/master/radialProfile.py\"\n",
-    "def radial_stats(image, center=None, var=True):\n",
-    "   \n",
-    "    y, x = np.indices(image.shape)\n",
-    "    if not center:\n",
-    "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
-    "        \n",
-    "    r = np.hypot(y - center[0], x - center[1])\n",
-    "    #plt.imshow(r, cmap=\"Accent\")\n",
-    "    #plt.show()\n",
-    "\n",
-    "    # Get sorted radii\n",
-    "    ind = np.argsort(r.flat)\n",
-    "    r_sorted = r.flat[ind]\n",
-    "    i_sorted = image.flat[ind]\n",
-    "\n",
-    "    # Get the integer part of the radii (bin size = 1)\n",
-    "    r_int = np.around(r_sorted)\n",
-    "\n",
-    "    # Find all pixels that fall within each radial bin.\n",
-    "    deltar = r_int[1:] - r_int[:-1]  # Assumes all radii represented\n",
-    "    rind = np.where(deltar)[0]       # location of changed radius\n",
-    "    nr = rind[1:] - rind[:-1]        # number of radius bin\n",
-    "    #print(nr)\n",
-    "    \n",
-    "    csim = np.cumsum(i_sorted, dtype=float)\n",
-    "    sq_csim = np.cumsum(np.square(i_sorted), dtype=float)\n",
-    "    radial_avg  = (csim[rind[1:]] - csim[rind[:-1]]) / nr\n",
-    "    \n",
-    "    if var:    \n",
-    "        avg_square = np.square(radial_avg)\n",
-    "        square_avg = (sq_csim[rind[1:]] - sq_csim[rind[:-1]]) / nr\n",
-    "        mask = avg_square.copy()\n",
-    "        mask[np.where(avg_square==0)] = 1.0\n",
-    "        radial_var = (square_avg - avg_square) / mask\n",
-    "        return r, radial_avg, radial_var, (square_avg - avg_square)\n",
-    "    \n",
-    "    else:\n",
-    "        return r, radial_avg\n",
-    "    \n",
-    "def load_binary_4D_stack(img_adr, datatype, original_shape, final_shape, log_scale=False):\n",
-    "    stack = np.fromfile(img_adr, dtype=datatype)\n",
-    "    stack = stack.reshape(original_shape)\n",
-    "    print(stack.shape)\n",
-    "    if log_scale:\n",
-    "        stack = np.log(stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]])\n",
-    "    else:\n",
-    "        stack = stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]]\n",
-    "    \n",
-    "    print(stack.shape) \n",
-    "    return stack\n",
-    "\n",
-    "def fourd_roll_axis(stack):\n",
-    "    stack = np.rollaxis(np.rollaxis(stack, 2, 0), 3, 1)\n",
-    "    return stack\n",
-    "\n",
-    "def remove_center_beam(image, center=None, cb_rad=0):\n",
-    "    y, x = np.indices(image.shape)\n",
-    "    if not center:\n",
-    "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
-    "        \n",
-    "    r = np.hypot(y - center[0], x - center[1])\n",
-    "    r = np.around(r)\n",
-    "    ri = np.where(r<=cb_rad)\n",
-    "    \n",
-    "    image[ri] = 0\n",
-    "    \n",
-    "    return image\n",
-    "\n",
-    "def radial_indices(shape, radial_range, center=None):\n",
-    "    y, x = np.indices(shape)\n",
-    "    if not center:\n",
-    "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
-    "    \n",
-    "    r = np.hypot(y - center[0], x - center[1])\n",
-    "    ri = np.ones(r.shape)\n",
-    "    \n",
-    "    if len(np.unique(radial_range)) > 1:\n",
-    "        ri[np.where(r <= radial_range[0])] = 0\n",
-    "        ri[np.where(r > radial_range[1])] = 0\n",
-    "        \n",
-    "    else:\n",
-    "        r = np.round(r)\n",
-    "        ri[np.where(r != round(radial_range[0]))] = 0\n",
-    "    \n",
-    "    return ri\n",
-    "\n",
-    "def indices_at_r(shape, radius, center=None):\n",
-    "    y, x = np.indices(shape)\n",
-    "    if not center:\n",
-    "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
-    "    r = np.hypot(y - center[0], x - center[1])\n",
-    "    r = np.around(r)\n",
-    "    \n",
-    "    ri = np.where(r == radius)\n",
-    "    \n",
-    "    angle_arr = np.zeros(shape)\n",
-    "    for i in range(shape[0]):\n",
-    "        for j in range(shape[1]):\n",
-    "            angle_arr[i, j] = np.angle(complex(x[i, j]-center[1], y[i, j]-center[0]), deg=True)\n",
-    "            \n",
-    "    angle_arr = angle_arr + 180\n",
-    "    angle_arr = np.around(angle_arr)\n",
-    "    \n",
-    "    ai = np.argsort(angle_arr[ri])\n",
-    "    r_sort = (ri[1][ai], ri[0][ai])\n",
-    "    a_sort = np.sort(angle_arr[ri])\n",
-    "        \n",
-    "    return r_sort, a_sort\n",
-    "\n",
-    "def local_var_similarity(var_map, w_size, stride):\n",
-    "    var_map = np.asarray(var_map)\n",
-    "    rows = range(0, var_map.shape[0]-w_size+1, stride)\n",
-    "    cols = range(0, var_map.shape[1]-w_size+1, stride)\n",
-    "    new_shape = (len(rows), len(cols))\n",
-    "    \n",
-    "    surr_avg = []\n",
-    "    surr_std = []\n",
-    "    surr_dif = []\n",
-    "    for i in rows:\n",
-    "        for j in cols:\n",
-    "            local_region = var_map[i:i+w_size, j:j+w_size].flatten()\n",
-    "            \n",
-    "            if np.max(local_region) != 0.0:\n",
-    "                local_region = local_region / np.max(local_region)\n",
-    "            else:\n",
-    "                local_region = local_region * 0.0\n",
-    "            \n",
-    "            temp_avg = np.mean(local_region)\n",
-    "            temp_std = np.std(local_region)\n",
-    "            surr_avg.append(temp_avg)\n",
-    "            surr_std.append(temp_std)\n",
-    "            diff_mse = np.sum(np.square(local_region - local_region[int(w_size**2/2)]))/(w_size**2-1)\n",
-    "            surr_dif.append(diff_mse)\n",
-    "            \n",
-    "    surr_avg = np.asarray(surr_avg).reshape(new_shape)\n",
-    "    surr_std = np.asarray(surr_std).reshape(new_shape)\n",
-    "    surr_dif = np.asarray(surr_dif).reshape(new_shape)\n",
-    "    \n",
-    "    return surr_avg, surr_std, surr_dif, new_shape\n",
-    "\n",
-    "def local_DP_similarity(f_flat, w_size, stride):\n",
-    "    f_flat = np.asarray(f_flat)\n",
-    "    rows = range(0, f_flat.shape[0]-w_size+1, stride)\n",
-    "    cols = range(0, f_flat.shape[1]-w_size+1, stride)\n",
-    "    new_shape = (len(rows), len(cols))\n",
-    "    \n",
-    "    dp_mse = []\n",
-    "    dp_ssim = []\n",
-    "    for i in rows:\n",
-    "        for j in cols:        \n",
-    "            local_region = f_flat[i:i+w_size, j:j+w_size].reshape(w_size**2, -1)\n",
-    "            ref_dp = local_region[int(w_size**2/2)]\n",
-    "            local_region = np.delete(local_region, int(w_size**2/2), axis=0)\n",
-    "            tmp_mse = []\n",
-    "            tmp_ssim = []\n",
-    "            for fdp in local_region:\n",
-    "                tmp_mse.append(mean_squared_error(ref_dp/np.max(ref_dp), fdp/np.max(fdp)))\n",
-    "                tmp_ssim.append(ssim(ref_dp/np.max(ref_dp), fdp/np.max(fdp)))\n",
-    "                \n",
-    "            dp_mse.append(np.mean(tmp_mse))\n",
-    "            dp_ssim.append(np.mean(tmp_ssim))\n",
-    "            \n",
-    "    dp_mse = np.asarray(dp_mse).reshape(new_shape)\n",
-    "    dp_ssim = np.asarray(dp_ssim).reshape(new_shape)\n",
-    "    \n",
-    "    return dp_mse, dp_ssim, new_shape"
+    "import sys\n",
+    "sys.path.append(\"E:/github_repo/4DSTEM_processing/\")\n",
+    "from FDSTEM_process import *\n",
+    "plt.rcParams['font.family'] = 'Cambria'"
    ]
   },
   {
@@ -206,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_adr = tkf.askopenfilenames()\n",
+    "raw_adrs = tkf.askopenfilenames()\n",
     "print(*raw_adr, sep=\"\\n\")"
    ]
   },
@@ -217,156 +36,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for adr in raw_adr:\n",
-    "\n",
-    "    # Load a data (DM)\n",
-    "    stack_4d = tifffile.imread(adr)\n",
-    "    print(stack_4d.shape)\n",
-    "    f_shape = stack_4d.shape\n",
-    "\n",
-    "    stack_4d = stack_4d / np.max(stack_4d)\n",
-    "    if np.isnan(np.max(stack_4d)):\n",
-    "        print(\"NaN exists\")\n",
-    "        stack_4d = np.nan_to_num(stack_4d)\n",
-    "    stack_4d = stack_4d.clip(min=0.0)\n",
-    "    print(np.max(stack_4d))\n",
-    "    print(np.min(stack_4d))\n",
-    "    print(np.mean(stack_4d))\n",
-    "\n",
-    "    stack_4d_original = stack_4d.copy()\n",
-    "    \n",
-    "    # find the center position (center of mass)\n",
-    "    \"\"\"\n",
-    "    mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
-    "    c_pos = [64.0, 64.0]\n",
+    "for raw_adr in raw_adrs:\n",
+    "    print(raw_adr)\n",
+    "    fd = FourDSTEM_process(raw_adr)\n",
+    "    c_pos = fd.find_center(cbox_edge=15)\n",
     "    print(c_pos)\n",
     "\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
-    "    ax.imshow(mean_dp, cmap=\"gray\")\n",
-    "    ax.axis(\"off\")\n",
-    "    ax.scatter(c_pos[1], c_pos[0], s=15, c=\"r\")\n",
-    "    ax.add_patch(pch.Rectangle((cbox_outx, cbox_outy), cbox_edge, cbox_edge, \n",
-    "                               linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "    \"\"\"\n",
-    "\n",
-    "    mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
-    "    cbox_edge = 40\n",
-    "    cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
-    "    cbox_outx = int(mean_dp.shape[1]/2 - cbox_edge/2)\n",
-    "    center_box = mean_dp[cbox_outy:-cbox_outy, cbox_outx:-cbox_outx]\n",
-    "    Y, X = np.indices(center_box.shape)\n",
-    "    com_y = np.sum(center_box * Y) / np.sum(center_box)\n",
-    "    com_x = np.sum(center_box * X) / np.sum(center_box)\n",
-    "    c_pos_original = [com_y+cbox_outy, com_x+cbox_outx]\n",
-    "    c_pos = [com_y+cbox_outy, com_x+cbox_outx]\n",
-    "    print(c_pos)\n",
-    "\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
-    "    ax.imshow(mean_dp, cmap=\"gray\")\n",
-    "    ax.axis(\"off\")\n",
-    "    ax.scatter(c_pos[1], c_pos[0], s=15, c=\"r\")\n",
-    "    ax.add_patch(pch.Rectangle((cbox_outx, cbox_outy), cbox_edge, cbox_edge, \n",
-    "                               linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # radial average of DPs (not variance, intensity direcltly, RDF?)\n",
-    "    radial_avg_stack = []\n",
-    "    len_profile = []\n",
-    "    for i in range(f_shape[0]):\n",
-    "        for j in range(f_shape[1]):\n",
-    "            _, radial_temp = radial_stats(stack_4d[i, j], center=c_pos, var=False)\n",
-    "            len_profile.append(len(radial_temp))\n",
-    "            radial_avg_stack.append(radial_temp)\n",
-    "\n",
-    "    if len(np.unique(len_profile)) > 1:\n",
-    "        print(np.unique(len_profile))\n",
-    "        shortest = np.min(len_profile)\n",
-    "        for i in range(len(radial_avg_stack)):\n",
-    "            radial_avg_stack[i] = radial_avg_stack[i][:shortest]\n",
-    "\n",
-    "    radial_avg_stack = np.asarray(radial_avg_stack).reshape(f_shape[0], f_shape[1], -1)\n",
-    "    print(radial_avg_stack.shape)\n",
-    "\n",
-    "    radial_avg_sum = np.sum(radial_avg_stack, axis=(0, 1))\n",
-    "    print(radial_avg_sum.shape)\n",
-    "    \n",
-    "    # save (radial average, 3D)\n",
-    "    tifffile.imwrite(adr[:-4]+\"_radial_avg.tif\", radial_avg_stack)\n",
-    "    \n",
-    "    # calculate variance with all angles at a certain k\n",
-    "    radial_var_stack = []\n",
-    "    len_profile = []\n",
-    "    for i in range(f_shape[0]):\n",
-    "        for j in range(f_shape[1]):\n",
-    "            _, _, radial_temp, _ = radial_stats(stack_4d[i, j], center=c_pos, var=True)\n",
-    "            len_profile.append(len(radial_temp))\n",
-    "            radial_var_stack.append(radial_temp)\n",
-    "\n",
-    "    if len(np.unique(len_profile)) > 1:\n",
-    "        print(np.unique(len_profile))\n",
-    "        shortest = np.min(len_profile)\n",
-    "        for i in range(len(len_profile)):\n",
-    "            radial_var_stack[i] = radial_var_stack[i][:shortest]\n",
-    "\n",
-    "    radial_var_stack = np.asarray(radial_var_stack).reshape(f_shape[0], f_shape[1], -1)\n",
-    "    print(radial_var_stack.shape)\n",
-    "\n",
-    "    radial_var_sum = np.sum(radial_var_stack, axis=(0, 1))\n",
-    "    print(radial_var_sum.shape)\n",
-    "    \n",
-    "    # save (radial variance, 3D)\n",
-    "    tifffile.imwrite(adr[:-4]+\"_radial_var.tif\", radial_var_stack)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebdbea78-081d-48b3-82da-16193755022c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# maximum intensity distribution\n",
-    "max_int = np.max(stack_4d, axis=(2, 3))\n",
-    "print(max_int.shape)\n",
-    "print(np.max(max_int))\n",
-    "print(np.min(max_int))\n",
-    "print(np.mean(max_int))\n",
-    "print(np.median(max_int))\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax[0].imshow(max_int, cmap=\"viridis\")\n",
-    "ax[0].axis(\"off\")\n",
-    "ax[1].hist(max_int.flatten(), bins=len(max_int))\n",
-    "ax[1].grid()\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab5a3c2a-1ec7-409e-91ac-c080b9ee6495",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# total intensity distribution\n",
-    "tot_int = np.sum(stack_4d, axis=(2, 3))\n",
-    "print(max_int.shape)\n",
-    "print(np.max(tot_int))\n",
-    "print(np.min(tot_int))\n",
-    "print(np.mean(tot_int))\n",
-    "print(np.median(tot_int))\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax[0].imshow(tot_int, cmap=\"viridis\")\n",
-    "ax[0].axis(\"off\")\n",
-    "ax[1].hist(tot_int.flatten(), bins=len(max_int))\n",
-    "ax[1].grid()\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
+    "    fd.rotational_average(also_variance=True)\n",
+    "    tifffile.imsave(raw_adr[:-4]+\"_radial_avg.tif\", fd.radial_avg_stack)\n",
+    "    tifffile.imsave(raw_adr[:-4]+\"_radial_var.tif\", fd.radial_var_stack)"
    ]
   }
  ],
