--- a/ptychography/abTEM/rpie_abTEM.ipynb
+++ b/ptychography/abTEM/rpie_abTEM.ipynb
@@ -180,37 +180,27 @@
     "                                                      in zip(experimental_measurement.calibrations[-2:], \n",
     "                                                             experimental_measurement.shape[-2:]))\n",
     "\n",
-    "print(f'pixelated_measurement sampling: {experimental_measurement_sampling}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a63ec5ad-497b-42f4-a384-aedead3db8dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f'pixelated_measurement sampling: {experimental_measurement_sampling}')\n",
+    "\n",
     "experimental_measurement_extent = tuple(energy2wavelength(energy)*1000/(cal.sampling) \n",
     "                                                      for cal\n",
     "                                                      in experimental_measurement.calibrations[-2:])\n",
     "\n",
-    "print(f'pixelated_measurement extent: {experimental_measurement_extent}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "777583ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recon_shape = np.array([experimental_measurement_extent[0]/experimental_measurement_sampling[0],\n",
-    "                        experimental_measurement_extent[1]/experimental_measurement_sampling[1]])\n",
-    "recon_shape = recon_shape.astype(np.int16)\n",
-    "print(recon_shape)\n",
+    "print(f'pixelated_measurement extent: {experimental_measurement_extent}')\n",
+    "\n",
     "recon_extent_x_ratio = experimental_measurement.calibration_limits[0][1] / experimental_measurement_extent[0]\n",
     "recon_extent_y_ratio = experimental_measurement.calibration_limits[1][1] / experimental_measurement_extent[1]\n",
-    "print(recon_extent_x_ratio, recon_extent_y_ratio)"
+    "print(recon_extent_x_ratio, recon_extent_y_ratio)\n",
+    "\n",
+    "recon_shape = list(experimental_measurement.shape[2:])\n",
+    "if recon_extent_x_ratio > 1.0:\n",
+    "    recon_shape[0] = recon_extent_x_ratio*experimental_measurement.shape[3]\n",
+    "\n",
+    "if recon_extent_y_ratio > 1.0:\n",
+    "    recon_shape[1] = recon_extent_y_ratio*experimental_measurement.shape[2]\n",
+    "\n",
+    "recon_shape = np.asarray(recon_shape).astype(np.int16)\n",
+    "print(recon_shape)"
    ]
   },
   {
@@ -471,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
