--- a/FEM/fem_analysis_revised.ipynb
+++ b/FEM/fem_analysis_revised.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fd.rotational_average(also_variance=False)"
+    "fd.rotational_average(rot_variance=True)"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radial_var = self.radial_var_stack.copy()\n",
+    "radial_var = fd.radial_var_stack.copy()\n",
     "radial_var_spectrum = np.sum(fd.radial_var_stack, axis=(0, 1))"
    ]
   },
