--- a/cepstrum/cepstral_STEM.ipynb
+++ b/cepstrum/cepstral_STEM.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fd = FourDSTEM_process(img_adr)"
+    "fd = FourDSTEM_process(img_adr, scan_per_pixel=1, scan_unit=\"nm\", dp_per_pixel=0.2079, k_unit=\"1/nm\")"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fd.cepstral(dCP=False)"
+    "fd.cepstral(dCP=True, rot_average=True, rot_variance=True)"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
-    "fd.show_4d_viewer(fd.ceps)"
+    "fd.show_4d_viewer(fd.dcp)"
    ]
   },
   {
@@ -60,8 +60,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tifffile.imwrite(\"cepstral_transformation.tif\", ceps)\n",
-    "tifffile.imwrite(\"dcp.tif\", dcp)"
+    "%matplotlib widget\n",
+    "fd.show_3d_viewer(fd.ceps_var_stack, fd.real_per_pixel*10, \"Å\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tifffile.imwrite(\"cepstral_transformation.tif\", fd.ceps)\n",
+    "tifffile.imwrite(\"dcp.tif\", fd.dcp)"
    ]
   }
  ],
