--- a/imaging/virtual_imaging.ipynb
+++ b/imaging/virtual_imaging.ipynb
@@ -14,6 +14,7 @@
     "from FDSTEM_process import *\n",
     "import tifffile\n",
     "import tkinter.filedialog as tkf\n",
+    "import time\n",
     "plt.rcParams['font.family'] = 'Cambria'"
    ]
   },
@@ -35,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scan_per_pixel = 0.11272 # Å\n",
-    "mrad_per_pixel = 0.40877 # mrad\n",
+    "scan_per_pixel = 0.502 # Å\n",
+    "mrad_per_pixel = 1.25 # mrad\n",
     "fd = FourDSTEM_process(raw_adr, scan_per_pixel, mrad_per_pixel)"
    ]
   },
@@ -104,9 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tifffile.imwrite(\"vHAADF.tif\", self.ADF_stem)\n",
-    "tifffile.imwrite(\"dDPC.tif\", self.charge_density)\n",
-    "tifffile.imwrite(\"iDPC.tif\", self.potential)"
+    "tifffile.imwrite(\"vHAADF.tif\", fd.ADF_stem)\n",
+    "tifffile.imwrite(\"dDPC.tif\", fd.charge_density)\n",
+    "tifffile.imwrite(\"iDPC.tif\", fd.potential)"
    ]
   },
   {
@@ -120,12 +121,12 @@
     "M = np.array([[alpha, beta, (1-alpha)*fd.c_ct[1]-beta*fd.c_ct[0]], \n",
     "              [-beta, alpha, beta*fd.c_ct[1]+(1-alpha)*fd.c_ct[0]]])\n",
     "\n",
-    "rotated_pacbed = rotation(fd.c_pacbed, M)\n",
-    "ri = radial_indices(fd.c_pacbed.shape, [0, fd.cropped_size], 1, center=fd.c_ct)\n",
+    "rotated_pacbed = rotation(fd.c_mean_dp, M)\n",
+    "ri = radial_indices(fd.c_mean_dp.shape, [0, fd.cropped_size], 1, center=fd.c_ct)\n",
     "mirror_plane = np.zeros(rotated_pacbed.shape)\n",
     "mirror_plane[:, int(fd.c_ct[1])] = 1\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax[0].imshow(np.multiply(fd.c_pacbed, ri), cmap=\"jet\")\n",
+    "ax[0].imshow(np.multiply(fd.c_mean_dp, ri), cmap=\"jet\")\n",
     "ax[0].imshow(mirror_plane, cmap=\"gray\", alpha=0.2)\n",
     "ax[0].scatter(fd.c_ct[1], fd.c_ct[0], s=15, c=\"k\")\n",
     "ax[0].axis(\"off\")\n",
@@ -145,7 +146,7 @@
    "outputs": [],
    "source": [
     "start = time.process_time()\n",
-    "rot_angle = 3\n",
+    "rot_angle = 90\n",
     "fd.symmetry_evaluation(rot_angle, also_mirror=True)\n",
     "print(\"%d seconds have passed\"%(time.process_time()-start))"
    ]
@@ -162,15 +163,15 @@
     "ax[0][0].scatter(fd.c_ct[1], fd.c_ct[0], s=15, c=\"k\")\n",
     "ax[0][0].set_title(\"original CBED\")\n",
     "ax[0][0].axis(\"off\")\n",
-    "ax[0][1].imshow(rotated_stack[0, 0], cmap=\"jet\")\n",
+    "ax[0][1].imshow(fd.rotation_stack[0, 0], cmap=\"jet\")\n",
     "ax[0][1].scatter(fd.c_ct[1], fd.c_ct[0], s=15, c=\"k\")\n",
     "ax[0][1].set_title(\"rotated CBED (angle=%d)\"%rot_angle)\n",
     "ax[0][1].axis(\"off\")\n",
     "ax[1][0].imshow(fd.c_stack[5, 5], cmap=\"jet\")\n",
-    "ax[1][0].scatter(fd.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
+    "ax[1][0].scatter(fd.c_ct[1], fd.c_ct[0], s=15, c=\"k\")\n",
     "ax[1][0].set_title(\"another original CBED\")\n",
     "ax[1][0].axis(\"off\")\n",
-    "ax[1][1].imshow(rotated_stack[5, 5], cmap=\"jet\")\n",
+    "ax[1][1].imshow(fd.rotation_stack[5, 5], cmap=\"jet\")\n",
     "ax[1][1].scatter(fd.c_ct[1], fd.c_ct[0], s=15, c=\"k\")\n",
     "ax[1][1].set_title(\"rotated CBED (angle=%d)\"%rot_angle)\n",
     "ax[1][1].axis(\"off\")\n",
@@ -195,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.10.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
