--- a/ptychography/abTEM/rpie_abTEM.ipynb
+++ b/ptychography/abTEM/rpie_abTEM.ipynb
@@ -53,6 +53,7 @@
     "\n",
     "    return data\n",
     "\n",
+    "# gpu option - CUDA\n",
     "device = \"cpu\"\n",
     "#device = \"gpu\""
    ]
@@ -95,7 +96,9 @@
     "print(f_stack.min(), f_stack.max())\n",
     "print(f_stack.mean())\n",
     "\n",
-    "f_stack = spike_remove(f_stack, percent_thresh=0.01, mode=\"lower\")\n",
+    "# remove spike pixels (replace the spike pixels with the pacbed) -> optional stopgap\n",
+    "#f_stack = spike_remove(f_stack, percent_thresh=0.01, mode=\"lower\")\n",
+    "\n",
     "f_stack = f_stack.clip(min=0.0)"
    ]
   },
@@ -107,12 +110,12 @@
    "outputs": [],
    "source": [
     "rotation_angle                    = 76*np.pi/180 # degree\n",
-    "energy                            = 200E3 # acceleration voltage\n",
+    "energy                            = 200E3 # acceleration voltage [V]\n",
     "semiangle                         = 19.8 # mrad\n",
     "step_size_real_space              = (0.408, 0.408) # angstrom\n",
     "reciprocal_space_sampling_mrad    = (0.619, 0.619) # mrad\n",
-    "center_x = 63.90314659829032 # pixel\n",
-    "center_y = 64.06042187282752 # pixel"
+    "center_x = 63.90314659829032 # diffaction center x, [pixel]\n",
+    "center_y = 64.06042187282752 # diffraction center y, [pixel]"
    ]
   },
   {
@@ -149,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# iDPC\n",
     "icom = center_of_mass(experimental_measurement, return_icom=True)\n",
     "\n",
     "icom.show()\n",
@@ -175,6 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reconstruction sampling scale / extent\n",
+    "\n",
     "experimental_measurement_sampling = tuple(energy2wavelength(energy)*1000/(cal.sampling * pixels) \n",
     "                                                      for cal,pixels \n",
     "                                                      in zip(experimental_measurement.calibrations[-2:], \n",
@@ -210,6 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rPIE\n",
+    "\n",
     "n_iter = 5\n",
     "RPIE_operator = RegularizedPtychographicOperator(experimental_measurement,\n",
     "                                                               semiangle_cutoff=semiangle,\n",
@@ -280,6 +288,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# mixed state ptychography\n",
+    "\n",
     "n_iter = 20\n",
     "n_probe = 5\n",
     "Mixed_operator = MixedStatePtychographicOperator(experimental_measurement,\n",
@@ -351,6 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# multislice ptychography\n",
+    "\n",
     "n_slice = 10\n",
     "slice_thicknesses = 500 / n_slice # angstrom\n",
     "n_iter = 10\n",
