--- a/ptychography/abTEM/rpie_abTEM.ipynb
+++ b/ptychography/abTEM/rpie_abTEM.ipynb
@@ -7,6 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jinseok Ryu, Ph.D.\n",
+    "# jinseuk56@gmail.com\n",
+    "# 20230927\n",
+    "\n",
     "from abtem import GridScan, PixelatedDetector, Potential, Probe, show_atoms, SMatrix, AnnularDetector\n",
     "from abtem.detect import PixelatedDetector\n",
     "from abtem.reconstruct import MixedStatePtychographicOperator, MultislicePtychographicOperator, RegularizedPtychographicOperator\n",
