--- a/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
+++ b/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jinseok Ryu, Ph.D.\n",
+    "# jinseuk56@gmail.com\n",
+    "# 20230927\n",
+    "\n",
     "import py4DSTEM\n",
     "import tkinter.filedialog as tkf\n",
     "import numpy as np\n",
@@ -37,20 +41,11 @@
     "\n",
     "    data[spike_ind] = pacbed.copy()\n",
     "\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_adr = tkf.askopenfilename()\n",
-    "print(file_adr)\n",
+    "    return data\n",
     "\n",
-    "_data = tifffile.imread(file_adr)\n",
-    "print(_data.shape)"
+    "\n",
+    "device = \"cpu\"\n",
+    "#device = \"gpu\""
    ]
   },
   {
@@ -59,6 +54,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# select the file you want to load\n",
+    "file_adr = tkf.askopenfilename()\n",
+    "print(file_adr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load a raw file and specify the calibration info\n",
+    "\"\"\"\n",
+    "dataset = py4DSTEM.io.import_file(file_adr)\n",
+    "\n",
+    "Rx, Ry = 0.30038461538461536, 0.30038461538461536\n",
+    "R_unit = \"A\"\n",
+    "Qx, Qy = 1.07, 1.07\n",
+    "Q_unit = \"mrad\"\n",
+    "\n",
+    "dataset.calibration._params['Q_pixel_size'] = Qx\n",
+    "dataset.calibration._params['Q_pixel_units'] = Q_unit\n",
+    "dataset.calibration._params['R_pixel_size'] = Rx\n",
+    "dataset.calibration._params['R_pixel_units'] = R_unit\n",
+    "\n",
+    "print(dataset)\n",
+    "print(dataset.calibration)\n",
+    "\n",
+    "HT = 200E3 # [V]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load a tif file and specify the calibration info\n",
+    "_data = tifffile.imread(file_adr)\n",
+    "print(_data.shape)\n",
+    "\n",
     "dataset = py4DSTEM.DataCube(data=_data)\n",
     "\n",
     "Rx, Ry = 0.3, 0.3\n",
@@ -72,7 +109,9 @@
     "dataset.calibration._params['R_pixel_units'] = R_unit\n",
     "\n",
     "print(dataset)\n",
-    "print(dataset.calibration)"
+    "print(dataset.calibration)\n",
+    "\n",
+    "HT = 200E3 # [V]"
    ]
   },
   {
@@ -81,6 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (optional) invert the dimensions (a, b, c, d) -> (c, d, a, b)\n",
+    "\n",
     "dataset.data = fourd_roll_axis(dataset.data)\n",
     "\n",
     "print(dataset)\n",
@@ -93,8 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.data = np.nan_to_num(dataset.data)\n",
-    "dataset.data = spike_remove(dataset.data, percent_thresh=0.01, mode=\"lower\")"
+    "# (optional)\n",
+    "dataset.data = np.nan_to_num(dataset.data) # NaN -> 0\n",
+    "#dataset.data = spike_remove(dataset.data, percent_thresh=0.01, mode=\"lower\") # remove spike pixels (replace the spike pixels with the pacbed) -> optional stopgap"
    ]
   },
   {
@@ -178,7 +220,7 @@
     "# Initialize the DPC reconstruction\n",
     "dpc = py4DSTEM.process.phase.DPCReconstruction(\n",
     "    datacube=dataset,\n",
-    "    energy = 200E3,\n",
+    "    energy = HT,\n",
     ").preprocess()"
    ]
   },
@@ -207,8 +249,8 @@
     "# initialize the reconstruction class\n",
     "parallax = py4DSTEM.process.phase.ParallaxReconstruction(\n",
     "    datacube=dataset,\n",
-    "    energy = 200e3,\n",
-    "    # device = \"gpu\", \n",
+    "    energy = HT,\n",
+    "    device = device, \n",
     "    verbose = True\n",
     ").preprocess(\n",
     "    normalize_images=True,\n",
@@ -288,8 +330,8 @@
    "source": [
     "ptycho = py4DSTEM.process.phase.SingleslicePtychographicReconstruction(\n",
     "    datacube=dataset,\n",
-    "    device = 'cpu',\n",
-    "    energy = 200e3,\n",
+    "    device = device,\n",
+    "    energy = HT,\n",
     "    semiangle_cutoff = semiangle_cutoff,\n",
     "    defocus = defocus,\n",
     "    object_type='potential',\n",
@@ -364,11 +406,11 @@
     "ptycho_mix = py4DSTEM.process.phase.MixedstatePtychographicReconstruction(\n",
     "    datacube=dataset,\n",
     "    verbose=True,\n",
-    "    energy=80E3,\n",
+    "    energy=HT,\n",
     "    num_probes=2,\n",
     "    semiangle_cutoff=semiangle_cutoff,\n",
     "    defocus=defocus,\n",
-    "    device='cpu',\n",
+    "    device=device,\n",
     "    object_type='potential',\n",
     ").preprocess(\n",
     "    plot_center_of_mass = False,\n",
@@ -467,10 +509,10 @@
     "    num_slices=num_slice,\n",
     "    slice_thicknesses=slice_thickness,\n",
     "    verbose=True,\n",
-    "    energy=200E3,\n",
+    "    energy=HT,\n",
     "    defocus=defocus,\n",
     "    semiangle_cutoff=semiangle_cutoff,\n",
-    "    device='gpu',\n",
+    "    device=device,\n",
     ").preprocess(\n",
     "    plot_center_of_mass = False,\n",
     "    plot_rotation=False,\n",
@@ -541,10 +583,10 @@
     "    num_slices=num_slice,\n",
     "    slice_thicknesses=slice_thickness,\n",
     "    verbose=True,\n",
-    "    energy=80E3,\n",
+    "    energy=HT,\n",
     "    defocus=defocus,\n",
     "    semiangle_cutoff=semiangle_cutoff,\n",
-    "    device='cpu',\n",
+    "    device=device,\n",
     ").preprocess(\n",
     "    plot_center_of_mass = False,\n",
     "    plot_rotation=False,\n",
