--- a/ptychography/pyPtychoSTEM/WDD_execution.ipynb
+++ b/ptychography/pyPtychoSTEM/WDD_execution.ipynb
@@ -96,21 +96,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "## use this to run SSB without aberration correction\n",
-    "wdd = WDD(data_4D)\n",
-    "wdd.run()\n",
-    "\n",
-    "wdd.plot_result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +132,8 @@
    },
    "outputs": [],
    "source": [
+    "## without aberration correction\n",
+    "\n",
     "wdd_ac = WDD(data_4D)\n",
     "wdd_ac.run(aberrations = -svd.aberration_coeffs)\n",
     "\n",
@@ -159,20 +146,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f,ax = plt.subplots(2,2,figsize=(8,8))\n",
-    "ax[0,0].imshow(wdd_ac.phase)\n",
-    "ax[1,0].imshow(wdd.phase)\n",
-    "ax[0,1].imshow(wdd_ac.amplitude)\n",
-    "ax[1,1].imshow(wdd.amplitude)\n",
-    "for i in range(4):\n",
-    "    ax[int(i/2),i%2].set_yticks([])\n",
-    "    ax[int(i/2),i%2].set_xticks([])\n",
-    "ax[0,0].set_ylabel('AC corrected')\n",
-    "ax[1,0].set_ylabel('uncorrected SSB')\n",
-    "ax[0,0].set_title('phase')\n",
-    "ax[0,1].set_title('amplitude')\n",
-    "\n",
-    "plt.tight_layout()"
+    "f,ax = plt.subplots(1, 2, figsize=(16, 8))\n",
+    "ax[0].imshow(wdd_ac.phase)\n",
+    "ax[1].imshow(wdd_ac.amplitude)\n",
+    "ax[0].axis(\"off\")\n",
+    "ax[1].axis(\"off\")\n",
+    "f.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
