--- a/ptychography/abTEM/rpie_abTEM.ipynb
+++ b/ptychography/abTEM/rpie_abTEM.ipynb
@@ -278,7 +278,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
-    "ax.imshow(np.angle(exp_objects[-1].array).T[:int(recon_shape[0]*recon_extent_x_ratio), :int(recon_shape[1]*recon_extent_y_ratio)], \n",
+    "ax.imshow(np.angle(exp_objects[-1].array).T[:int(recon_shape[1]*recon_extent_y_ratio), :int(recon_shape[0]*recon_extent_x_ratio)], \n",
     "          cmap='inferno', origin=\"lower\",\n",
     "          extent=[0, experimental_measurement.calibration_limits[0][1], 0, experimental_measurement.calibration_limits[1][1]])\n",
     "fig.tight_layout()\n",
@@ -344,7 +344,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
-    "ax.imshow(np.angle(exp_objects[-1].array).T[:int(recon_shape[0]*recon_extent_x_ratio), :int(recon_shape[1]*recon_extent_y_ratio)], \n",
+    "ax.imshow(np.angle(exp_objects[-1].array).T[:int(recon_shape[1]*recon_extent_y_ratio), :int(recon_shape[0]*recon_extent_x_ratio)], \n",
     "          cmap='inferno', origin=\"lower\",\n",
     "          extent=[0, experimental_measurement.calibration_limits[0][1], 0, experimental_measurement.calibration_limits[1][1]])\n",
     "fig.tight_layout()\n",
@@ -436,7 +436,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
-    "ax.imshow(np.angle(mspie_objects[-1].array).sum(0).T[:int(recon_shape[0]*recon_extent_x_ratio), :int(recon_shape[1]*recon_extent_y_ratio)], \n",
+    "ax.imshow(np.angle(mspie_objects[-1].array).sum(0).T[:int(recon_shape[1]*recon_extent_y_ratio), :int(recon_shape[0]*recon_extent_x_ratio)], \n",
     "          cmap='inferno', origin=\"lower\",\n",
     "          extent=[0, experimental_measurement.calibration_limits[0][1], 0, experimental_measurement.calibration_limits[1][1]])\n",
     "fig.tight_layout()\n",
@@ -453,7 +453,8 @@
     "for j in range(n_iter):\n",
     "    fig, ax = plt.subplots(1, n_slice, figsize=(5*n_slice, 5))\n",
     "    for i in range(n_slice):\n",
-    "        ax[i].imshow(np.angle(mspie_objects[j].array[i]).T, cmap=\"inferno\", origin=\"lower\",\n",
+    "        ax[i].imshow(np.angle(mspie_objects[j].array[i]).T[:int(recon_shape[1]*recon_extent_y_ratio), :int(recon_shape[0]*recon_extent_x_ratio)], \n",
+    "                     cmap=\"inferno\", origin=\"lower\",\n",
     "                     extent=[0, experimental_measurement.calibration_limits[0][1], 0, experimental_measurement.calibration_limits[1][1]])\n",
     "        \n",
     "    fig.tight_layout()\n",
