--- a/ptychography/abTEM/rpie_abTEM.ipynb
+++ b/ptychography/abTEM/rpie_abTEM.ipynb
@@ -267,6 +267,15 @@
     "axes[1,-1].axis(\"off\")\n",
     "\n",
     "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "errs = []\n",
+    "for i in range(n_iter):\n",
+    "    errs.append(exp_sse[i].get())\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.plot(np.arange(2,n_iter)+1, errs[2:], 'k-')\n",
+    "fig.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -283,6 +292,18 @@
     "          extent=[0, experimental_measurement.calibration_limits[0][1], 0, experimental_measurement.calibration_limits[1][1]])\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13bf1f61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tifffile.imwrite(\"rpie_result.tif\", \n",
+    "                 np.angle(exp_objects[-1].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
+    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])"
    ]
   },
   {
@@ -320,6 +341,8 @@
     "for i in range(exp_objects[-1].dimensions):\n",
     "    print(exp_objects[-1].calibrations[i].name, exp_objects[-1].calibrations[i].units,\n",
     "          exp_objects[-1].calibrations[i].sampling)\n",
+    "    \n",
+    "plot_every = 5\n",
     "\n",
     "fig, axes = plt.subplots(1, int(np.ceil(len(exp_objects) / plot_every))+1, figsize=(20, 8))\n",
     "\n",
@@ -332,6 +355,15 @@
     "axes[-1].set_title('iteration: %d, SSE: %.2e'%(n_iter, exp_sse[-1]))\n",
     "axes[-1].axis(\"off\")\n",
     "\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "errs = []\n",
+    "for i in range(n_iter):\n",
+    "    errs.append(exp_sse[i].get())\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.plot(np.arange(2,n_iter)+1, errs[2:], 'k-')\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -356,6 +388,18 @@
     "    ax[i].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93d9ecfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tifffile.imwrite(\"mixed_rpie_result.tif\", \n",
+    "                 np.angle(exp_objects[-1].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
+    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])"
    ]
   },
   {
@@ -411,6 +455,15 @@
     "axes[1,-1].axis(\"off\")\n",
     "\n",
     "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "errs = []\n",
+    "for i in range(n_iter):\n",
+    "    errs.append(mspie_sse[i].get())\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.plot(np.arange(2,n_iter)+1, errs[2:], 'k-')\n",
+    "fig.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -459,6 +512,19 @@
     "        \n",
     "    fig.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5580030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(n_slice):\n",
+    "    tifffile.imwrite(\"multislice_result.tif\", \n",
+    "                     np.angle(mspie_objects[-1].array[i]).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
+    "                                                            :int(recon_shape[0]*recon_extent_x_ratio)])"
    ]
   }
  ],
