--- a/imaging/segmented_DPC_imaging.ipynb
+++ b/imaging/segmented_DPC_imaging.ipynb
@@ -49,23 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "932f9451",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "masktype=\"gaussian\"\n",
-    "i,j = 0, 1\n",
-    "\n",
-    "for n in np.arange(1,6,.5):                  # Select n values to test\n",
-    "    s.makeFourierMask(mask=masktype,n=n)     # Set the selected Fourier mask\n",
-    "    s.show_Fourier_mask(i=i,j=j)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "50c678f9",
    "metadata": {},
    "outputs": [],
@@ -182,7 +165,8 @@
    "source": [
     "print(np.mean(xsh_aligned), np.std(xsh_aligned))\n",
     "print(np.mean(ysh_aligned), np.std(ysh_aligned))\n",
-    "print(np.mean(xsh_aligned)/np.mean(ysh_aligned))"
+    "print(np.mean(xsh_aligned)/np.mean(ysh_aligned))\n",
+    "ratio = np.mean(xsh_aligned)/np.mean(ysh_aligned)"
    ]
   },
   {
@@ -192,10 +176,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hpass_val = 5E-4\n",
-    "lpass_val = 1E-1\n",
+    "hpass_val = 1E-3\n",
+    "lpass_val = 1E-3\n",
     "\n",
-    "E_mag, E_field_x, E_field_y, charge_density, potential = segmented_DPC(xsh_aligned, ysh_aligned, \n",
+    "E_mag, E_field_x, E_field_y, charge_density, potential = segmented_DPC(xsh_aligned, ysh_aligned*ratio, \n",
     "                                                                    correct_rotation=True,\n",
     "                                                                    n_theta=50,\n",
     "                                                                    hpass=hpass_val,\n",
